4.4.9 -> 4.5:
    - jbj: insure that RPMFILE_EXISTS is set for %config files.
    - jbj: fix ptr alignment problem seen on pld/sparc64.
    - jbj: re-add /usr/bin/rpmbuild for now, poptBT option wiring needs fixing.
    - jbj: pass -F fnum to patch (#243720).
    - jbj: refactor _free() from rpmlib.h -> rpmio.h.
    - jbj: add _rpmhome macro, revector helper paths through _rpmhome.
    - jbj: hack a version into magic install path. better needs to be done.
    - jbj: start consistent versionlibdir usage in all Makefile.am files.
    - jbj: populate /usr/lib/rpm/@VERSION@/ instead of foo-@VERSION@ files.
    - jbj: move gendiff into the scripts directory.
    - jbj: don't include perl/CVS with "make dist".
    - jbj: remove rpmbuild and rpmb helper for now.
    - jbj: fix plain brown rpm upgrade rpm.spec.
    - jbj: rescusutate build after cvs server side tree surgery.
    - skip packages/headers with unverifiable signatures.
    - update library version.
    - eliminate rpm executable helpers.
    - install rpm into /usr/bin, not /bin.
    - build popt as separate package.
    - protottype headerGetEntry 4th arg as void *, not void **.
    - add D_(...) i18n marker for debug messages, with default disable.
    - perl: don't read rpmrc by default.
    - python: don't read rpmrc by default.
    - don't build Packagecolor index (yet).
    - revert Filedigests -> Filemd5s index name.
    - configure: modern usage.
    - popt: allow tests to pass in distcheck where builddir != srcdir.
    - python: restore rpm.RPMSENSE_PREREQ for rpmlint.
    - python: permit hdr.name as well as hdr['name'].
    - python: pathetic band-aid pythonic return fixing (#239586).
    - python: missing ts reference while iterating(#241751).
    - revert indices to db_hash for compatibility.
    - upgrade to file-4.21 (CVE-2007-2026, CVE-2007-2799).
    - build against rpm5.org cvs,
    - fix: swap PART_INSTALL and PART_CLEAN automagic cleanup.
    - keys: add Getpass stub vector.